--- a/README
+++ b/README
@@ -26,3 +26,13 @@ examples:
   px --pre="lambda a: a**2+1" "[X/Y for X,Y in zip(x,y)]" <(px [4,3,3]) <(px [1,1,3])
   px -i numpy,matplotlib.pyplot "plot([1,2],[4,2])" -x "show()"
     
+installation (local):
+  [Assuming ~/.local/bin is in PATH.]
+  wget -O ~/.local/bin/px https://raw.githubusercontent.com/m2-farzan/px/main/px
+  chmod +x ~/.local/bin/px
+
+installation (global):
+  [Assuming /usr/local/bin is in PATH.]
+  sudo wget -O /usr/local/bin/px https://raw.githubusercontent.com/m2-farzan/px/main/px
+  sudo chmod +x /usr/local/bin/px
+    
