add simple  loop example

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -1213,6 +1213,46 @@
     "    grep -Po \"Duration:\\s\\K(\\d|:)+\" | \\\n",
     "    px -L -i pytimeparse.timeparse,datetime \"timeparse(x)\" - --post \"lambda u: timedelta(seconds=sum(u))\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quick for loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! This is iteration #0.\n",
+      "Hi! This is iteration #1.\n",
+      "Hi! This is iteration #2.\n",
+      "Hi! This is iteration #3.\n",
+      "Hi! This is iteration #4.\n",
+      "Hi! This is iteration #5.\n",
+      "Hi! This is iteration #6.\n",
+      "Hi! This is iteration #7.\n",
+      "Hi! This is iteration #8.\n",
+      "Hi! This is iteration #9.\n",
+      "\u001b[?2004h"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "source": [
+    "px 'range(10)' | xargs -Ix printf 'Hi! This is iteration #%d.\\n' x"
+   ]
   }
  ],
  "metadata": {
